# rust-tangra-bookmark

./: .gitignore  Cargo.toml  Dockerfile  build.rs
.github/workflows/: ci.yaml
assets/: menus.yaml  openapi.yaml
configs/: data.yaml  logger.yaml  server.yaml
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: index.ts  routes.ts  shell.d.ts
frontend/src/api/: admin-api.ts  client.ts  services.ts
frontend/src/locales/: en-US.json
frontend/src/sdk/: index.ts  register.ts  types.ts
frontend/src/stores/: bookmark.state.ts  permission.state.ts
frontend/src/views/list/: bookmark-drawer.vue  index.vue  permission-drawer.vue
frontend/src/views/permissions/: index.vue
migrations/: 001_create_bookmarks.sql  002_create_permissions.sql
proto/admin/service/v1/: admin_stub.proto
proto/bookmark/service/v1/: backup.proto  bookmark.proto  permission.proto  user.proto
proto/common/service/v1/: module_registration.proto
proto/google/api/: http.proto
src/: cert.rs  config.rs  frontend.rs  main.rs  registration.rs
src/authz/: checker.rs  engine.rs  mod.rs  relations.rs
src/client/: admin_client.rs  mod.rs
src/data/: bookmark_repo.rs  db.rs  mod.rs  permission_repo.rs
src/middleware/: audit.rs  mod.rs  mtls.rs
src/service/: backup_service.rs  bookmark_service.rs  context_helper.rs  mod.rs  permission_service.rs  user_service.rs
